Expand meta viewport example
to include -ms-viewport, so we can test IE10/IE11 snap mode

--- a/viewport-meta-css/viewport-width-device.html
+++ b/viewport-meta-css/viewport-width-device.html
@@ -3,15 +3,11 @@
 <title>Viewport test: @viewport set to device-width</title>
 <link rel="stylesheet" href="style.css">
 <style>
-@-o-viewport {
-	width:device-width;
-}
-@-webkit-viewport {
-	width:device-width;
-}
-@viewport {
-	width:device-width;
-}
+@-webkit-viewport{width:device-width}
+@-moz-viewport{width:device-width}
+@-ms-viewport{width:device-width}
+@-o-viewport{width:device-width}
+@viewport{width:device-width}
 </style>
 <script src="scripts/report.js"></script>
 </head>
